[package]
name = "rust-meros"
version = "0.1.0"
authors = ["xoreo <mattnappo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.5"
bincode = "1.2.1"
serde = { version = "1.0.111", features = ["derive"] }
ecies-ed25519 = { version = "0.4.0", features = ["serde"] }
rand = "0.7.3"
